# FrameJK

./: .gitignore  CMakeLists.txt  main.cpp
conf/: framejk.conf
include/: CommentCtrl.h  ConfLoad.h  CreateShare.h  HttpRequest.h  InitConf.h  Logger.h  TaskQueue.h  ThreadPool.h  Tool.h  TransCtx.h  threadpool.h
src/downstream/: HttpRequest.cpp
src/threadpool/: threadpool.cpp
